# testicli

./: .gitignore  README.md  pyproject.toml
src/testicli/: cli.py  config.py  interactive.py  models.py  ui.py
src/testicli/core/: analyzer.py  failure_analyzer.py  planner.py  quality.py  runner.py  scanner.py  writer.py
src/testicli/languages/: base.py  go.py  javascript.py  python.py
src/testicli/llm/: client.py  prompts.py
src/testicli/quality/: llm_review.py  static.py
src/testicli/storage/: store.py
src/testicli/test_types/: base.py  e2e.py  fuzzing.py  integration.py  security.py  unit.py
tests/: test_models.py  test_quality_static.py  test_scanner.py  test_storage.py
